<resources>
    <string name="app_name">Geopins</string>
    <string name="map_key" translatable="false">AIzaSyCw8uvmTAQqF36eZXJbXTavxgC2QyIyINk</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>

    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Text_Insert words -->
    <string name="title">Insert your Geopin </string>
    <string name="hint">Your comment…</string>

    <!-- Content Description for images -->
    <string name="ProfileImage">GoogleProfileImage</string>

    <string name="server_client_id">154246692768-c6i4f0e9voackq4pr56f87hnlq0dqfq2.apps.googleusercontent.com</string>
    <string name="your_comment_title">Your comment title...</string>
</resources>
